# inc_gateway

./: .bazelrc  BUILD  MODULE.bazel  README.md  check_clang_format.sh  versions.json
.devcontainer/: devcontainer.json
.github/workflows/: copyright.yml  docs-cleanup.yml  docs.yml  license_check.yml  test.yml
docs/: index.rst
main/: genindex.html
pr-22/: index.html  search.html
src/: BUILD
src/gateway/assert_handler/: BUILD
src/gateway/assert_handler/include/score/gateway/: assert_handler.h
src/gateway/common/: BUILD  common.sh
src/gateway/common/include/score/gateway/: datatype.h
src/gateway/common/src/: common.cpp
src/gateway/gateway/: BUILD  test_someip_gateway.sh
src/gateway/gateway/src/: dlopen.cpp  dlopen.hpp  gateway.cpp  gateway.h  someip_gateway_main.cpp
src/gateway/ipc_test_client/: BUILD  test_ipc_bridge.sh
src/gateway/ipc_test_client/cpp/: main.cpp  sample_sender_receiver.cpp  sample_sender_receiver.h
src/gateway/ipc_test_client/rust/: ipc_bridge.rs  ipc_bridge_gen.rs
src/gateway/payload_transformation_plugin/src/: ipc_bridge_payload_transformator.cpp
src/gateway/plugin_interface/: BUILD
src/gateway/plugin_interface/include/score/gateway/: payload_transformation_plugin_interface.hpp  service_configuration.hpp  someip_plugin_interface.hpp
src/gateway/plugin_interface/src/: service_configuration.cpp
src/gateway/someip_plugin/: BUILD
src/gateway/test_integration/: BUILD
src/gateway/test_integration/common/: BUILD
src/gateway/test_integration/ipc_test_client/: BUILD
src/gateway/test_integration/payload_transformation_plugin/: BUILD
src/gateway/test_integration/someip_plugin/: BUILD
src/socom/: BUILD  README.adoc
src/socom/doc/design/: 10_context_view.adoc  30_structural_view.adoc  README.adoc
src/socom/doc/design/models/: component_diagram_socom.puml  context_diagram_socom.puml
src/socom/include/score/socom/: result.hpp
src/socom/src/: client_connector_impl.hpp  payload.cpp  runtime_impl.cpp  server_connector_impl.cpp
