# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

"""SOME/IP Gateway bridges internal IPC communication to SOME/IP

Initially it does not do E2E or payload transformation and just forwards the payload.
E2E and payload transformation will be added in future releases.

As long as the IPC communication only supports events, they are the only supported
SOME/IP message type.
"""

module(
    name = "some-ip_gateway",
    version = "0.0",
)

bazel_dep(name = "rules_python", version = "1.4.1")

PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = PYTHON_VERSION,
)
use_repo(python)

# Add GoogleTest dependency
bazel_dep(name = "googletest", version = "1.17.0")

# Rust rules for Bazel
bazel_dep(name = "rules_rust", version = "0.63.0")

# C/C++ rules for Bazel
bazel_dep(name = "rules_cc", version = "0.2.1")

# Shell rules for Bazel
bazel_dep(name = "rules_shell", version = "0.6.1")

# GCC toolchain, do not know how to allow deprecation warnings with LLVM
bazel_dep(name = "score_toolchains_gcc", version = "0.4", dev_dependency = True)

# Lets use host compiler
# gcc = use_extension("@score_toolchains_gcc//extentions:gcc.bzl", "gcc", dev_dependency = True)
# gcc.toolchain(
#     sha256 = "457f5f20f57528033cb840d708b507050d711ae93e009388847e113b11bf3600",
#     strip_prefix = "x86_64-unknown-linux-gnu",
#     url = "https://github.com/eclipse-score/toolchains_gcc_packages/releases/download/0.0.1/x86_64-unknown-linux-gnu_gcc12.tar.gz",
# )

# TODO to be moved to toolchain. https://github.com/eclipse-score/toolchains_gcc/issues/11
# gcc.extra_features(
#     features = [
#         "minimal_warnings",
#         "treat_warnings_as_errors",
#     ],
# )
# gcc.warning_flags(
#     minimal_warnings = [
#         "-Wall",
#         "-Wno-error=deprecated-declarations",
#     ],
#     strict_warnings = [
#         "-Wextra",
#         "-Wpedantic",
#     ],
#     treat_warnings_as_errors = ["-Werror"],
# )
# use_repo(gcc, "gcc_toolchain", "gcc_toolchain_gcc")

# tooling
bazel_dep(name = "score_tooling", version = "1.0.1")
bazel_dep(name = "aspect_rules_lint", version = "1.5.3")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")
bazel_dep(name = "rules_pkg", version = "1.1.0")

# Baselibs
bazel_dep(name = "rules_boost", repo_name = "com_github_nelhage_rules_boost")
archive_override(
    module_name = "rules_boost",
    strip_prefix = "rules_boost-master",
    urls = ["https://github.com/nelhage/rules_boost/archive/refs/heads/master.tar.gz"],
)

bazel_dep(name = "boost.program_options", version = "1.87.0")
bazel_dep(name = "score-baselibs", version = "0.0.0")
git_override(
    module_name = "score-baselibs",
    commit = "f02d7f427df1968df8d5f9f9aa85bf68baeb839e",
    remote = "https://github.com/eclipse-score/baselibs.git",
)

# Communication
## TRLC dependency for requirements traceability
bazel_dep(name = "trlc", version = "0.0.0")
git_override(
    module_name = "trlc",
    commit = "650b51a47264a4f232b3341f473527710fc32669",  # trlc-2.0.2 release
    remote = "https://github.com/bmw-software-engineering/trlc.git",
)

bazel_dep(name = "communication", version = "0.0.0")
git_override(
    module_name = "communication",
    commit = "3ab524104ed0adb4451c045e407c0e7fe68dbc08",
    remote = "https://github.com/eclipse-score/communication.git",
)

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.spec(
    package = "futures",
    version = "0.3.31",
)
crate.spec(
    package = "libc",
    version = "0.2.155",
)
crate.spec(
    features = ["derive"],
    package = "clap",
    version = "4.5.4",
)
crate.from_specs(name = "crate_index2")
use_repo(crate, "crate_index")
